Arrays.asList -> List.of
 - Arrays.asList()는 그 안의 요소가 바뀔 수 있지만, List.of()는 그 안의
   요소가 불변이다. 테스트에서 쓰는 값은 테스트 도중 바뀌지 않으므로
   List.of()로 변경한다.